--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Nunito:wght@300;400;600;700;800;900&family=Russo+One&family=Spartan:wght@700;800;900&display=swap");
 
+
 body {
     font-family:  "Nunito", sans-serif;
     margin: 0 32px;
@@ -76,7 +77,8 @@ main {
 .input-container {
     display: flex;
     flex-direction: column;
-    margin-bottom: 12px;
+    margin-bottom: 28px;
+    position: relative;
 }
 
 .input-container label {
@@ -118,6 +120,14 @@ main {
 
 .context-menu div:hover {
     background-color: #ddd;
+}
+
+.error {
+    margin: 0;
+    font-size: 12px;
+    color: red;
+    position: absolute;
+    top: 50px;
 }
 
 @media (max-width: 900px) {
