Sorting done on numbering and alfabaticaly of expense table

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,10 @@ main {
     top: 50px;
 }
 
+.clear_sort {
+    cursor: pointer;
+}
+
 @media (max-width: 900px) {
     body {
         margin-inline: 16px;
